# veldist

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
docs/: Makefile  README_IMAGES.md  api.md  conf.py  examples.md  fig_bimodal.py  fig_deconvolution.py  fig_design_matrix.py  fig_kin_maps.py  fig_prior.py  fig_summary_metrics.py  generate_all_example_images.py  generate_example_images.py  index.md  theory.md
docs/images/: README.md
src/veldist/: __init__.py  analysis.py  veldist.py
tests/: __init__.py  helpers.py  test_basic.py  test_inference.py
