[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veldist"
version = "0.2.0"
description = "Infer velocity distribution from noisy data"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
keywords = ["astronomy", "kinematics", "bayesian", "velocity", "deconvolution"]
authors = [{ name = "Peter Smith", email = "pesmith@mpia.de" }]
license = { file = "LICENSE" }
dependencies = ["numpy", "numpyro", "jax", "matplotlib", "scipy", "astropy"]

[project.urls]
homepage = "https://github.com/pjs902/veldist"

[project.optional-dependencies]
dev = ["pytest>=7.0", "scipy"]
docs = [
    "sphinx>=7.0",
    "sphinx-book-theme>=1.0",
    "myst-parser>=4.0.1",
    "sphinx-copybutton",
    "ipython",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
